--- a/css/main.css
+++ b/css/main.css
@@ -356,7 +356,7 @@ section#contact{
 		}
 	}
 
-	@media screen and (max-width: 768px)
+	@media screen and (min-width: @screen-sm-min)
 	{
 		section#content-1, section#content-2, section#connected, section#contact{
 			height: auto;
