--- a/css/main.css
+++ b/css/main.css
@@ -233,6 +233,15 @@ section#portofolio{
 		color: #eee;
 		border: 1px solid #eee;
 	}
+	button.btn-primary{
+		text-transform: uppercase;
+		font-size: 1em;
+		width: 200px;
+		margin-top: 20px;
+		background: #252525;
+		color: #eee;
+		border: 1px solid #eee;
+	}
 
 	
 
@@ -393,6 +402,29 @@ section#contact{
 			margin-top: 17%;
 		}
 	}
-	.modal-content{
-		background: #252525;
+
+	.modal-header{
+		border: none;
+	}
+	.modal-body{
+		border: none;
+		padding-top: 20px;
+	}
+	.modal-footer{
+		border: none;
+	}
+	div.typedWrapp{
+		width: 100%;
+		text-align: center;
+	}
+	span#typed{
+		font-size: 2em;
+		text-align: center;
+		text-transform: capitalize;
+		color: #aaa;
+	}
+
+	span.typed-cursor{
+		color: #aaa;
+		font-size: 2em;
 	}
